# securechat

./: README.md
server/: Cargo.toml
server/commands/: Cargo.toml
server/commands/src/: create_auth.rs  lib.rs  registeruser.rs  sendmessage.rs
server/crates/app/: Cargo.toml
server/crates/app/src/: main.rs  routes.rs  telemetry.rs
server/crates/app/src/steps/: auth.rs  mod.rs  user.rs
server/crates/commands/: Cargo.toml
server/crates/domain/: Cargo.toml
server/crates/domain/src/: error.rs  lib.rs
server/crates/domain/src/dto/: auth_challenge.rs  register.rs  signed_token.rs
server/crates/domain/src/models/: email.rs  keys.rs  mod.rs  nonce.rs
server/crates/infra/: Cargo.toml
server/crates/infra/.sqlx/: query-cd6ad24132065560ec177a053c89e4ab0486e4b073e4570faae5c55796c3b9c9.json
server/crates/infra/migrations/: 20260514040944_0001-init.sql
server/crates/infra/src/crypto/: mod.rs
server/crates/infra/src/database/: insert_auth_challenge.rs  insert_user.rs  mod.rs
server/crates/pipeline-core/: Cargo.toml
server/crates/pipeline-core/src/: chain.rs  engine.rs  error.rs  hlist.rs  lib.rs  request.rs  stages.rs  step.rs
server/crates/pipeline-core/src/dto/: mod.rs  register.rs  signed_token.rs
server/crates/pipeline-core/src/primitives/: bytes_impl.rs  mod.rs  primitives.rs
server/crates/pipeline-http/: Cargo.toml
server/crates/pipeline-http/src/: engine.rs  error.rs  lib.rs  traits.rs
server/crates/pipeline-http/src/extractors/: auth.rs  mod.rs  valid.rs
server/crates/primitives/: Cargo.toml
server/crates/primitives/src/: impls.rs  lib.rs  repr_bytes.rs
server/domain/: Cargo.toml
server/domain/src/: lib.rs
server/domain/src/dto/: auth_challenge.rs  mod.rs  register.rs  sendmessage.rs
server/domain/src/models/: email.rs  message.rs  plainpassword.rs  username.rs
server/infra/: Cargo.toml
server/infra/.sqlx/: query-638a8a1d0eea038117ed2e08b0e4b361138b4194d3d70cde7be0cce89eacb06e.json  query-832fcdc4d4c0cafedb12ebf86398a2eb66c1b499f27e51e838443c75dbc3ff0a.json
server/infra/migrations/: 20260513180511_0001_init.sql  20260514040944_0001-init.sql
server/infra/src/: lib.rs
server/infra/src/crypto/: mod.rs
server/infra/src/database/: insert_auth_challenge.rs  insert_user.rs  mod.rs
server/pipeline/: Cargo.toml
server/pipeline/src/: auth.rs  engine.rs  error.rs  lib.rs  primitives.rs  request.rs  stages.rs
server/pipeline/src/commands/: create_auth.rs  mod.rs  registeruser.rs  sendmessage.rs
server/pipeline/src/dto/: auth_challenge.rs  mod.rs  register.rs  sendmessage.rs  signed_token.rs
server/pipeline/src/extractors/: auth.rs  valid.rs
server/pipeline/src/models/: email.rs  message.rs  mod.rs  plainpassword.rs  username.rs
server/pipeline/src/primitives/: from_str.rs  hex_bytes.rs
server/pipeline/src/process/: chain.rs  hlist.rs  mod.rs  step.rs
server/pipeline/src/traits/: mod.rs
server/pipeline/src/typestate/: mod.rs  request.rs  stages.rs
server/server-core/: Cargo.toml
server/server-core/src/: main.rs  routes.rs  telemetry.rs
server/validation-core/: Cargo.toml
server/validation-core/src/: error.rs  lib.rs  validate.rs
server/validation-derive/: Cargo.toml
server/validation-derive/src/: expand.rs  lib.rs  model.rs  parse.rs
