[workspace]
members = ["pipeline",
    "pipeline/",
    "commands/", "commands", "domain/", "domain", "infra/", "infra", "server-core/", "server-core",
]
resolver = "3"

[workspace.dependencies]
#Web framework
axum            = { version = "0.8.9", features = ["macros"] }
tokio           = { version = "1.52.3",   features = ["full"] }
tower           = "0.4"
tower-http      = { version = "0.5", features = ["limit", "trace"] }

# Auth
jsonwebtoken    = "9"

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Validation helpers
validator       = { version = "0.18", features = ["derive"] }
zxcvbn          = "3"           # password-strength estimation

# Database (sqlx, postgres)
sqlx            = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
uuid            = { version = "1", features = ["v7", "serde", "std"] }
chrono          = { version = "0.4", features = ["serde"] }
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-error-handler = "0.2.1"
anyhow = "1.0.102"
