[workspace]
members = ["crates/pipeline-core", "crates/infra", "crates/app", "crates/pipeline-http", "crates/domain", "crates/primitives"]
resolver = "3"

[workspace.dependencies]
# Workspace Crates
primitives = { path = "crates/primitives" }
domain = { path = "crates/domain" }
pipeline-core = { path = "crates/pipeline-core" }
pipeline-http = { path = "crates/pipeline-http" }
infra = { path = "crates/infra" }

# Global Allocator
mimalloc = "0.1"

# Async Runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }

# Web
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace", "request-id", "util"] }
http = "1.4.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation helpers
validator = { version = "0.18", features = ["derive"] }
nutype = { version = "0.7", features = ["serde", "derive_unchecked", "new_unchecked"] }

# Auth
jsonwebtoken = "9"

# Heterogenous List
frunk_core = "0.4.4"
frunk = "0.4.4"

# Password strength estimation
zxcvbn = "3"

# Hashing / Cryptography
argon2 = "0.5"
ed25519-dalek = "2.2.0"

# Database (sqlx, postgres)
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# Utilities
uuid = { version = "1", features = ["v7", "serde", "std"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1.0.102"
axum-error-handler = "0.2.1"
rand = "0.10.0"
hex = "0.4.3"
dotenvy = "0.15.7"
zeroize = { version = "1.8.2", features = ["serde"] }

# tracing / telemetry
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry       = { version = "0.31", features = ["trace"] }
opentelemetry_sdk   = { version = "0.31", features = ["rt-tokio", "trace"] }
opentelemetry-otlp  = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
