[package]
name = "pipeline"
version = "0.0.0"
edition = "2024"

[dependencies]
axum.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
axum-error-handler.workspace = true
sqlx.workspace = true
rand.workspace = true
hex.workspace = true
zxcvbn.workspace = true
chrono.workspace = true

syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
