[package]
name = "pipeline"
version = "0.0.0"
edition = "2024"

[dependencies]
axum.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
axum-error-handler.workspace = true
sqlx.workspace = true
rand.workspace = true
hex.workspace = true
zxcvbn.workspace = true
chrono.workspace = true

nutype = { version = "0.7", features = ["serde", "derive_unchecked", "new_unchecked"] }
validator = { version = "0.18", features = ["derive"] }
zeroize = { version = "1.8.2", features = ["serde"] }
argon2 = "0.5"
