[package]
name = "server-core"
version = "0.0.0"
edition = "2024"

[dependencies]
commands = { path = "../commands" }
domain = { path = "../domain" }
infra = { path = "../infra" }
pipeline = { path = "../pipeline" }

tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
