[package]
name = "server-core"
version = "0.0.0"
edition = "2024"

[dependencies]
infra = { path = "../infra" }
pipeline = { path = "../pipeline" }

mimalloc.workspace = true
http.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
