[package]
name = "domain"
version = "0.0.0"
edition = "2024"

[dependencies]
primitives.workspace = true
pipeline-http.workspace = true
pipeline-core.workspace = true

serde.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "macros"] }
rand.workspace = true
nutype.workspace = true
argon2.workspace = true
zeroize.workspace = true
zxcvbn.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
