[package]
name = "infra"
version = "0.0.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
ed25519-dalek.workspace = true

pipeline-core.workspace = true
pipeline-http.workspace = true
primitives.workspace = true
domain.workspace = true
